--- a/src/Components/Games/game.scss
+++ b/src/Components/Games/game.scss
@@ -12,7 +12,9 @@
         margin: 0 auto;
         gap: 20px;
         .games-left{
-            width: 37%;
+            min-width: 628px;
+            max-width: 630px;
+
             margin-top: 40px;
             display: flex;
             flex-direction: column;
@@ -77,7 +79,8 @@
     .games-container{
         margin: 0 auto;
         .games-left{
-            width: 37%;
+            min-width: 555px !important;
+    max-width: 560px !important;
             h2{
                 font-size: 24px!important;
             }
@@ -102,7 +105,8 @@
     .games-container{
         margin: 0 auto;
         .games-left{
-            width: 60%;
+            min-width: 356px !important;
+            max-width: 388px !important;
             h2{
                 font-size: 20px!important;
             }
@@ -126,7 +130,8 @@
     .games-container{
         margin: 0 auto;
         .games-left{
-            width: 60%;
+            min-width: 330px !important;
+            max-width: 335px !important;
             h2{
                 font-size: 17px!important;
             }
@@ -145,6 +150,8 @@
         flex-direction: column !important;
         .games-left{
             width: 100% !important;
+            min-width: 100% !important;
+            max-width: 100% !important;
             justify-content: center !important;
             align-items: center!important;
             h2{
